# Sherlly_password_manager_windows

./: Cargo.toml  README.md
src/: add_entry.rs  decrypt.rs  del_entry.rs  encrypt.rs  input_wrapper.rs  main.rs  make_db.rs  make_db_safe.rs  mass_import.rs  password_file.rs  show_pass.rs
