[package]
name = "spm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clipboard = "0.5.0"
csv = "1.1.6"
dirs = "4.0.0"
lazy_static = "1.4.0"
rand = "0.8.5"
random = "0.13.2"
rpassword = "7.2.0"
tindercrypt = "0.3.2"
